--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -351,6 +351,26 @@ interactions <- felm(
 ```
 
 ```{r}
+# Quick residuals plot for the Shiny App -- save this with ggsave
+
+resid <- covid_fe$residuals
+
+resid <- cbind(resid, covid_fe$response) %>%
+  as_tibble() %>%
+  rename("residuals" = "business_days",
+         "business_days" = "V2") %>% 
+  mutate(residuals = abs(residuals))
+
+resid %>%
+  ggplot(aes(x = business_days, y = residuals)) + 
+    geom_jitter(alpha = 0.3, color = "darkblue") + 
+    labs(x = "Waiting Time (business days)", y = "Residuals", 
+         title = "Waiting Time vs. Residuals") +
+    ylim(0, 70) + 
+    theme_classic()
+```
+
+```{r}
 
 most_recent_both <- readRDS('most_recent_zip_withcounties_nobanks_1130.rds') %>%
   mutate(zip = as.factor(zip), fips = as.factor(fips))
@@ -526,7 +546,9 @@ interactions_check <- felm(
 
 ```{r}
 
-# County fixed effects gone
+# County fixed effects gone -- this is county regressions but without 
+# state fixed effects -- I'll come back and rerun with state fixed effects
+# at some point, I'm sure
 
 # most_recent_county <- most_recent_county %>%
 #   mutate(lender = as.factor(lender))
@@ -884,7 +906,7 @@ covid_binomial <-  fenegbin(business_days ~ 1 +
     non_essential_closure_current|lender + fips, most_recent)
 ```
 ```{r}
-# Trying log again just to see what will happen
+# Trying log again just to see what will happen -- note R squared is better!
 
 # Regression 1
 
@@ -1193,11 +1215,100 @@ interactions_state <- felm(
 ```{r}
 # Let's also take a look at whether this relationship is significant on
 # county level, using minority business ownership instead of minority
-# percent
+# percent -- this means we take out the state dummies
 
 most_recent_ownership_county <- 
   readRDS('most_recent_county_nobanks_ownership.rds') %>%
-  mutate(lender = as.factor(lender), state = as.factor(state))
+  mutate(lender = as.factor(lender), state = as.factor(state),
+         fips = as.factor(fips))
+
+# For Justin -- add the other regressions here for a full table, then 
+# rerun the business roundtable and bank in the next file too using this
+
+county_dems_biz <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent|0|0|fips, 
+    data = most_recent_ownership_county
+)
+
+county_loan_biz <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported|lender|0|fips, 
+    data = most_recent_ownership_county
+)
+
+county_econ_biz <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent|lender|0|fips, 
+    data = most_recent_ownership_county
+)
+
+county_covid_biz <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths|lender|0|fips, 
+    data = most_recent_ownership_county
+)
+
+# Ran these already -- check Macbook GDrive
 
 county_covid_biz <- felm(business_days ~ 1 + 
     median_income + 
@@ -1260,41 +1371,5 @@ county_covid_biz_sq <- felm(business_days ~ 1 +
 )
 ```
 
-```{r}
-
-# Doing the same on zip level -- don't run this, it doesn't work lol
-
-covid_fe <- felm(
-  business_days ~ 1 + 
-    median_family_income + 
-    percent_minority_biz_county +
-    high_school_pct + 
-    married_percent + male_percent + 
-    cook_pvi + 
-    rural +
-    estimate_gini_index +
-    violent_crime_rate + renter_percent + 
-    delay +
-    loan_150_350 +
-    loan_350_1mil +
-    loan_1mil_2mil +
-    loan_2mil_5mil + 
-    loan_5mil_10mil + 
-    jobs_reported +
-    banks_per_pop + 
-    businesses_per_pop + 
-    payroll +
-    unemployment_rate_apr + 
-    unemployment_rate + 
-    mean_start_cases_weighted +
-    mean_start_deaths_weighted + 
-    mean_end_cases_weighted +
-    mean_end_deaths_weighted + 
-    stay_at_home_apr + 
-    stay_at_home_current + 
-    non_essential_closure_apr + 
-    non_essential_closure_current|state + lender|0|fips,
-  data = most_recent_ownership)
-```
 
 
