--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -1304,7 +1304,11 @@ county_covid_biz <- felm(business_days ~ 1 +
     mean_start_cases +
     mean_start_deaths + 
     mean_end_cases +
-    mean_end_deaths|lender|0|fips, 
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current|lender|0|fips, 
     data = most_recent_ownership_county
 )
 
@@ -1367,6 +1371,41 @@ county_covid_biz_sq <- felm(business_days ~ 1 +
     mean_end_cases +
     mean_end_deaths + 
     I(percent_minority_biz^2)|lender + state|0|fips, 
+    data = most_recent_ownership_county
+)
+
+# No state FEs
+
+county_covid_biz_sq <- felm(business_days ~ 1 + 
+    median_income + 
+    percent_minority_biz + 
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate + renter_percent +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current + 
+    I(percent_minority_biz^2)|lender|0|fips, 
     data = most_recent_ownership_county
 )
 ```
